<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Display -->
    <!-- Expression -->
    <TextView
        android:id="@+id/expressionView"
        android:text=""
        android:textSize="18sp"
        android:gravity="end"
        android:textColor="#888888"
        android:maxLines="1"
        android:ellipsize="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Result -->
    <TextView
        android:id="@+id/resultView"
        android:text="@string/zero"
        android:textSize="40sp"
        android:gravity="end"
        android:maxLines="1"
        android:ellipsize="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Buttons Grid -->
    <GridLayout
        android:id="@+id/buttonGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:useDefaultMargins="true">

        <!-- Use same buttons but add style -->

        <Button style="@style/CalcButton" android:text="@string/seven"/>
        <Button style="@style/CalcButton" android:text="@string/eight"/>
        <Button style="@style/CalcButton" android:text="@string/nine"/>
        <Button style="@style/OperatorButton" android:text="@string/divisionSymbol"/>

        <Button style="@style/CalcButton" android:text="@string/four"/>
        <Button style="@style/CalcButton" android:text="@string/five"/>
        <Button style="@style/CalcButton" android:text="@string/six"/>
        <Button style="@style/OperatorButton" android:text="@string/multiplicationSymbol"/>

        <Button style="@style/CalcButton" android:text="@string/one"/>
        <Button style="@style/CalcButton" android:text="@string/two"/>
        <Button style="@style/CalcButton" android:text="@string/three"/>
        <Button style="@style/OperatorButton" android:text="@string/subtractionSymbol"/>

        <Button style="@style/CalcButton" android:text="@string/zero"/>
        <Button style="@style/CalcButton" android:text="@string/decimalPoint"/>
        <Button style="@style/EqualButton" android:text="@string/equalToSymbol"/>
        <Button style="@style/OperatorButton" android:text="@string/additionSymbol"/>

        <Button
            style="@style/ClearButton"
            android:text="@string/backspace"
            android:layout_columnSpan="4"/>

    </GridLayout>

</LinearLayout>